# dave

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md
examples/: CMakeLists.txt  dave_config.lua  hello_dave.cpp
include/dave/core/: engine.hpp  event_channel.hpp  event_channel_queue.hpp  platform.hpp.in  system.hpp  task.hpp  task_scheduler.hpp
include/dave/util/: concurrent_queue.hpp
include/dave/video/: video.hpp  window.hpp
source/core/: engine.cpp  platform_desktop.cpp  system.cpp  task.cpp  task_scheduler.cpp
source/video/: video.cpp  window_desktop.cpp
